kubernetes/doc-home-cluster/apps/selfhosted/librechat/app/networkpolicy.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: librechat
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: librechat
  egress:
    # MongoDB
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: librechat-mongodb
      toPorts:
        - ports:
            - port: "27017"
              protocol: TCP

    # Meilisearch
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: librechat-meilisearch
      toPorts:
        - ports:
            - port: "7700"
              protocol: TCP

    # RAG-API
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: librechat-rag-api
      toPorts:
        - ports:
            - port: "8000"
              protocol: TCP

    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: authentik
            k8s:io.kubernetes.pod.namespace: security
      toPorts:
        - ports:
            - port: "9000"
              protocol: TCP
